--- a/src/app/components/show-case/show-case.component.html
+++ b/src/app/components/show-case/show-case.component.html
@@ -3,3 +3,19 @@
 <app-navbar></app-navbar>
 
 </section>
+<section >
+    <app-hero></app-hero>
+
+</section>
+<section>
+    <app-features></app-features>
+</section>
+<section id="about-us">
+    <app-about-us></app-about-us>
+</section>
+<section id="contact-us">
+    <app-contact-us></app-contact-us>
+</section>
+<section id="footer">
+    <app-footer></app-footer>
+</section>
