--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -1,22 +1,34 @@
 .content-container {
     text-align: center; /* Centers the text */
-    max-width: 600px; /* Maximum width of the content area */
+    /* max-width: 600px; Maximum width of the content area */
     margin: auto; /* Centers the content container */
     padding: 20px; /* Padding around the content */
   }
   .text{
-    font-size: 16px;
+    font-size: 20px;
     font-family: 500;
     white-space: wrap;
     width: 100%;
   }
-  h1, h2 {
-    color: #333; /* Dark text color */
-    margin: 10px 0; /* Space above and below the headers */
+  br{
+    line-height: 2px;
+  }
+  /* h1 {
+    color: #000; 
+    margin: 10px 0; 
+
+  } */
+   h2 {
+    color: #000; /* Dark text color */
+    margin: 40px auto; /* Space above and below the headers */
+    font-size: 48px;
+    font-weight: 800;
+    max-width:700px ;
   }
   
+  
   p {
-    color: #666; /* Lighter text color for the paragraph */
+    color: #000; /* Lighter text color for the paragraph */
     margin-bottom: 20px; /* Space below the paragraph */
   }
   
@@ -32,24 +44,19 @@
     --bs-btn-bg: #f3daa2;
     --bs-btn-border-color: none;
     --bs-btn-hover-color: black;
-    --bs-btn-hover-bg: #f3daa2;
+    --bs-btn-hover-bg: #f1cc7b;;
     font-weight: bold;
     padding: 14px 25px;
     border-radius: 16px;
     }
     .btn-border{
       --bs-btn-color: black;
-      --bs-btn-bg: #fff;
+      --bs-btn-bg:  var(--50, #EFF6FF);;
       --bs-btn-border-color: #f3daa2;
       --bs-btn-hover-color: black;
-      --bs-btn-hover-bg: none;
+      --bs-btn-hover-bg: #fff;
       --bs-btn-hover-border-color: #f3daa2;
       font-weight: bold;
       padding: 14px 25px;
       border-radius: 16px;
       }
-      h2[_ngcontent-ng-c658164294] {
-        color: #333;
-        margin: 10px 0;
-        font-weight: 600;
-    }
