--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -1,9 +1,10 @@
 
-<div class="content-container">
+<div class="content-container w-90 mx-auto ">
   <p class="text h4 ">في منصتنا نقدم لك كل ما هو جديد عن  <span class="fw-bold">عالم الذكاء الاصطناعى </span> 
-    كيفية استخدامه، أدواته المختلفة، والتلقينات الجاهزة </p>
 
-  <h2>تبحث عن أدوات للذكاء الاصطناعي تعزز من مشاريعك وأعمالك اليومية؟</h2>
+    كيفية استخدامه، أدواته <br >المختلفة، والتلقينات الجاهزة </p>
+
+  <h2 class="">تبحث عن أدوات للذكاء الاصطناعي تعزز من مشاريعك وأعمالك اليومية؟</h2>
   <div class="button-container d-flex justify-content-center">
     <button class="btn btn-border me-2">إذا كان لديك خواطر هنا</button>
     <button class="btn btn-bg ms-2">سجل الآن</button>
