--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,6 +2,7 @@
    font-family: "Noto Kufi Arabic", sans-serif;
     ;
     font-weight: 600;
+    font-size: 20px;
     
 
 }
@@ -12,12 +13,14 @@
 --bs-btn-hover-color: black;
 --bs-btn-hover-bg: #f3daa2;
 font-weight: bold;
-padding: 14px 18px;
+padding: 16px 20px;
 border-radius: 16px;
+font-size: 18px;
+
 }
 .logo{
-    width: 113px;
-    height: 56px;
+    width: 200px;
+    height: 100px;
     
 } 
 @media (max-width:991px) {
