--- a/src/styles.css
+++ b/src/styles.css
@@ -26,8 +26,188 @@ a{
 --bs-btn-bg: #f3daa2;
 --bs-btn-border-color: none;
 --bs-btn-hover-color: black;
---bs-btn-hover-bg: #f3daa2;
+--bs-btn-hover-bg: #f1cc7b;;
 font-weight: bold;
 padding: 14px 18px;
 border-radius: 16px;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Noto Kufi Arabic", sans-serif;
+    background: var(--50, #EFF6FF);
+}
+
+a {
+    text-decoration: none;
+}
+
+/*About Us Section*/
+.form-control {
+    background: var(--50, #EFF6FF);
+}
+.text-color{
+    background-color: #F3DAA2;
+}
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+.close-spacing{
+    width: 35%;
+    margin-bottom: 30px;
+}
+
+.about-us .col-lg-6 {
+    min-height: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.about-us p {
+    margin: 0;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Adjust responsiveness */
+@media (max-width: 991px) {
+    .close-spacing {
+        width: 100%;
+        margin-bottom: 15px;
+    }
+}
+
+/*Contact-us section*/
+.logo-img[_ngcontent-ng-c3449220084] {
+    width: 250px;
+    height: 140px;
+    flex-shrink: 0;
+}
+
+.btn-send {
+    background-color: #F3DAA2;
+}
+
+.btn-send:hover {
+    background-color: #f1cc7b;
+}
+
+.contact-icons i {
+    background-color: #557481;
+}
+
+.p-facebook {
+    padding-right: 13px;
+    padding-left: 13px;
+}
+
+.lg-font {
+    color: #557481;
+}
+
+.form-control {
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+    opacity: 0.6;
+}
+
+.form-control:focus {
+    background-color: var(--bg-50, #EFF6FF);
+}
+
+.custom-class1[_ngcontent-ng-c517440552] {
+    margin-right: 8px;
+}
+.contact-icons {
+    margin-top: 5px; 
+    margin-bottom: 20px;
+}
+
+.form-div {
+    width: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: auto;
+}
+
+@media (max-width: 991px) {
+    .form-div {
+        width: 100%;
+    }
+}
+
+
+/*Footer*/
+.bg-footer {
+    background-color: #F3DAA2;
+}
+
+
+.footer a {
+    text-decoration: none;
+}
+
+.footer-text {
+    opacity: 0.8;
+    font-weight: 300;
+    font-size: 15px;
+}
+
+.footer-text {
+    max-width: 350px;
+    word-wrap: break-word;
+    hyphens: auto;
+    text-align: right;
+    margin-left: auto;
+}
+
+@media (max-width: 768px) {
+    .footer-text {
+        max-width: 500px;
+    }
+}
+
+.footer-row {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
+/* Default styles for small screens */
+.social-icons .icon-container a {
+    display: block;
+    text-align: right;
+}
+
+/* Centering icons in large screens */
+@media (min-width: 992px) {
+    .social-icons .icon-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+.social-icons .p-font-footer {
+    text-align: right;
+}
+
+@media (min-width: 992px) {
+    .social-icons .p-font-footer {
+        text-align: center;
+    }
 }
