--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -6,7 +6,7 @@
 
   <h2 class="">تبحث عن أدوات للذكاء الاصطناعي تعزز من مشاريعك وأعمالك اليومية؟</h2>
   <div class="button-container d-flex justify-content-center">
-    <button class="btn btn-border me-2">إذا كان لديك خواطر هنا</button>
+    <button class="btn btn-border me-2">ابدأ أول خطواتك معنا</button>
     <button class="btn btn-bg ms-2">سجل الآن</button>
 
   </div>
