--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -4,34 +4,34 @@
             <div class="row pt-3 footer-row mx-5">
                 <div class="col-lg-6 col-sm-12 mb-3 pb-4">
                     <p class="fs-1 " dir="rtl">هنا Ai</p>
-                    <p class="footer-text text-right fs-5" dir="rtl">
+                    <p class="footer-text text-right " dir="rtl">
                         منصة عربية تجمع جميع أدوات الذكاء الاصطناعي في  مختلف المجالات، وهندسة التلقين، ومقالات مختلفة.
                     </p>
-                    <p class="footer-text mt-5 fs-5" dir="rtl">
+                    <p class="footer-text mt-5 " dir="rtl">
                         جميع الحقوق محفوظة | HONA AI &copy; 2024
                     </p>
                 </div>
                 <div class="col-lg-2 col-sm-12 mb-3 pb-4" dir="rtl">
-                    <p class="fs-4">الروابط السريعة</p>
+                    <p class="">الروابط السريعة</p>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="footer-text text-dark fs-5">الصفحة الرئيسية</a></li>
-                        <li><a href="#" class="footer-text text-dark fs-5">التصنيفات</a></li>
-                        <li><a href="#" class="footer-text text-dark fs-5">الأسعار</a></li>
-                        <li><a href="#" class="footer-text text-dark fs-5">تواصل معنا</a></li>
-                        <li><a href="#" class="footer-text text-dark fs-5">من نحن</a></li>
+                        <li><a href="#" class="footer-text text-dark ">الصفحة الرئيسية</a></li>
+                        <li><a href="#" class="footer-text text-dark ">التصنيفات</a></li>
+                        <li><a href="#" class="footer-text text-dark ">الأسعار</a></li>
+                        <li><a href="#" class="footer-text text-dark ">تواصل معنا</a></li>
+                        <li><a href="#" class="footer-text text-dark ">من نحن</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-sm-12 pb-5"  dir="rtl">
-                    <p class="fs-4">الايميل</p>
-                    <a href="info@honaai.com" class="footer-text text-dark fs-5 ">info@honaai.com</a>
+                    <p class="fs-6">الايميل</p>
+                    <a href="info@honaai.com" class="footer-text text-dark  ">info@honaai.com</a>
                 </div>
                 <div class="col-lg-2 col-sm-12 mb-3 social-icons" dir="rtl">
-                    <p class="fs-4 p-font-footer">وسائل التواصل</p>
+                    <p class="fs-6 p-font-footer">وسائل التواصل</p>
                     <div class="icon-container">
-                        <a href=""><i class="fa-brands fa-facebook-f fs-3 footer-text text-dark"></i></a>
-                        <a href=""><i class="bi bi-instagram fs-3 footer-text text-dark"></i></a>
-                        <a href=""><i class="bi bi-twitter-x fs-3 footer-text text-dark"></i></a>
-                        <a href=""><i class="bi bi-whatsapp fs-3 footer-text text-dark"></i></a>
+                        <a href=""><i class="fa-brands fa-facebook-f fs-4 footer-text text-dark"></i></a>
+                        <a href=""><i class="bi bi-instagram fs-4 footer-text text-dark"></i></a>
+                        <a href=""><i class="bi bi-twitter-x fs-4 footer-text text-dark"></i></a>
+                        <a href=""><i class="bi bi-whatsapp fs-4 footer-text text-dark"></i></a>
                     </div>
                 </div>
 
