--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -20,19 +20,19 @@
               
              <form [formGroup]="contactForm" (ngSubmit)="onSubmit() "class="form-1">
                <div class="form-group mb-3">
-                  <input type="text" id="name" class="form-control border-1 py-2 fs-5" formControlName="name"  dir="rtl" placeholder="الاسم">
+                  <input type="text" id="name" class="form-control border-1  " formControlName="name"  dir="rtl" placeholder="الاسم">
                </div>
       
               <div class="form-group  mb-3"> 
-                <input type="email" id="email" class="form-control border-1 py-2 fs-5" formControlName="email"  dir="rtl" placeholder="الايميل">
+                <input type="email" id="email" class="form-control border-1  " formControlName="email"  dir="rtl" placeholder="الايميل">
               </div>
       
               <div class="form-group mb-3">
-                <textarea id="message" class="form-control border-1 fs-5 " formControlName="message" placeholder="Write your message" rows="8"  dir="rtl" placeholder="كيف نساعدك؟"></textarea>
+                <textarea id="message" class="form-control border-1  " formControlName="message" rows="8"  dir="rtl" placeholder="كيف نساعدك؟"></textarea>
              </div>
       
              <div class="d-flex justify-content-center mt-2">
-                <button type="button" class="btn btn-send rounded-4  fw-bold py-2 px-4 fs-5 ">إرسال</button>
+                <button type="button" class="btn btn-send rounded-4  fw-bold  px-4  ">إرسال</button>
             </div>
            </form>
        
