--- a/src/styles.css
+++ b/src/styles.css
@@ -91,9 +91,9 @@ a {
 }
 
 /*Contact-us section*/
-.logo-img[_ngcontent-ng-c3449220084] {
-    width: 250px;
-    height: 140px;
+.logo-img {
+    width: 210px;
+    height: 111px;
     flex-shrink: 0;
 }
 
