--- a/src/app/components/features/features.component.css
+++ b/src/app/components/features/features.component.css
@@ -3,14 +3,14 @@
     /* Optional: define a max width for the cards for better control on large screens */
     max-width: 370px;
    min-height: 254px; 
-    margin: 0 auto; 
+    margin: 0px; 
     ;
  background-color: var(--50, #EFF6FF);;
  border-radius: 20px;
 overflow: hidden;
   }
  .card-title{
-    font-size: 24px;
+    font-size: 20px;
  }
   .card-header {
     padding: var(--bs-card-cap-padding-y) var(--bs-card-cap-padding-x);
@@ -30,6 +30,6 @@ overflow: hidden;
     padding: 1rem 1rem 0;
     color: var(--bs-card-color);
     background-color: var(--50, #EFF6FF);;
-
+font-size: 16px;
 }
 
