--- a/src/app/components/features/features.component.html
+++ b/src/app/components/features/features.component.html
@@ -1,6 +1,6 @@
-<div class="container my-6">
+<div class="cards my-6">
     <div class="row">
-      <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mx-0 px-0" *ngFor="let card of items">
+      <div class="col-lg-4 col-md-6 col-sm-12 mb-3" *ngFor="let card of items">
         <div class="card text-center">
           <div class="card-header mt-2 d-flex  text-center mx-auto">
             <h5 class="card-title me-3 ">{{ card.title }}</h5>
