--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<section class="contact-us my-5 py-5">
+<section class="contact-us my-5 py-5 " id="contact-us">
     <div class="w-70 mx-auto">
         <div class="row footer-row ">
             <div class="col-lg-6 col-sm-12 custom-class1 p-0 ">
