--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,7 +10,7 @@
                   <a class="nav-link" href="#about-us">من نحن ؟</a>
                 </li>
                 <li class="nav-item mx-1">
-                    <a class="nav-link" href="#">تواصل معنا</a>
+                    <a class="nav-link" href="#contact-us">تواصل معنا</a>
                   </li>
                   <li class="nav-item mx-1">
                     <a class="nav-link" href="#">الأسعار</a>
