--- a/src/app/components/hero/hero.component.css
+++ b/src/app/components/hero/hero.component.css
@@ -61,3 +61,13 @@
       border-radius: 16px;
       font-size: 12px;
       }
+@media (max-width:410px) {
+  h2 {
+
+    font-size: 24px;
+
+  }
+  .text{
+    font-size: 14px;
+  }
+}
