--- a/src/app/components/show-case/show-case.component.css
+++ b/src/app/components/show-case/show-case.component.css
@@ -48,7 +48,7 @@
 @media (max-width:575px) {
     .show-case {
     
-        background-image: url('/assets/Banner 478 + opacity (224 h).png');
+        background-image: url('/assets/Banner.png');
         background-size: 100% 100%; 
         background-position: center; 
         background-repeat: no-repeat; 
