--- a/src/app/components/show-case/show-case.component.css
+++ b/src/app/components/show-case/show-case.component.css
@@ -10,8 +10,8 @@
         object-position: cover;
         width: 100%;      
         overflow: hidden;
-    
-       position: relative;
+        min-height: 65vh;
+        position: relative;
 }
 .show-case::after{
     content: '';
