--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -3,19 +3,19 @@
         <h1 class="text-center py-4 fw-bold fs-2" dir="rtl">عن هنا Ai</h1>
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-12 close-spacing">
-                <p class="text-color px-4 py-4 rounded-4 " dir="rtl">وجود تلقينات جاهزة في مجالات متنوعة لتسهيل إستخدام
+                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">وجود تلقينات جاهزة في مجالات متنوعة لتسهيل إستخدام
                     الذكاء</p>
             </div>
             <div class="col-lg-6 col-sm-12 close-spacing">
-                <p class="text-color px-4 py-4 rounded-4 " dir="rtl">مكتبة واسعة لأدوات الذكاء المختلفة في مكان واحد
+                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">مكتبة واسعة لأدوات الذكاء المختلفة في مكان واحد
                     لتسريع الوصول للأداة المناسبة</p>
             </div>
             <div class="col-lg-6 col-sm-12 close-spacing">
-                <p class="text-color px-4 py-4 rounded-4 " dir="rtl">إثراء المحتوى العربي بمقالات تعليمية عن استخدام
+                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">إثراء المحتوى العربي بمقالات تعليمية عن استخدام
                     الذكاء الاصطناعي في حياتنا اليومية والعملية</p>
             </div>
             <div class="col-lg-6 col-sm-12 close-spacing">
-                <p class="text-color px-4 py-4 rounded-4 " dir="rtl">
+                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">
                     شات بوت متميز في البحث عن ما تريده في منصتنا <br></p> 
             </div>
         </div>
