--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,5 +1,59 @@
+.lg-font {
+    color: #557481;
+}
+
+.form-control {
+    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+    opacity: 0.6;
+    background: var(--Secondary, #557481);
+}
+
+.form-control:focus {
+        background: var(--Secondary, #557481);
+}
+
+.custom-class1 {
+    margin-right: 30px;
+}
+
+.contact-icons {
+    margin-top: 5px; 
+    margin-bottom: 20px;
+}
+
+
+.btn-send {
+    background: rgba(239, 246, 255, 0.60);
+}
+
+.btn-send:hover {
+    background: rgba(221, 228, 237, 0.6);
+    color: #000;
+}
+
+/* Style the placeholder text for input fields and textarea */
+.form-control::placeholder {
+    color: white;
+    opacity: 1;
+}
+
+.form-div {
+    /* width: 35%; */
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: auto;
+}
+
+@media (max-width: 991px) {
+    .form-div {
+        width: 100%;
+    }
+}
+
+
 .bg-footer {
-    background-color: #F3DAA2;
+    background: var(--Secondary, #557481);
 }
 
 
