--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,37 +1,59 @@
+<!--Footer Section-->
 <section class="footer mt-5">
     <footer class="pt-4 pb-2 mt-5 bg-footer">
-        <div class="w-75 mx-auto py-5">
-            <div class="row pt-3 footer-row mx-5">
-                <div class="col-lg-6 col-sm-12 mb-3 pb-4">
-                    <p class="fs-1 " dir="rtl">هنا Ai</p>
-                    <p class="footer-text text-right " dir="rtl">
+        <div class="container py-5">
+            <div class="row pt-3 footer-row mx-2 text-light">
+                <div class="col-lg-5 col-sm-12 mb-3 pb-4">
+                    <p class="fs-2" dir="rtl">هنا AI</p>
+                    <p class="footer-text text-right" dir="rtl">
                         منصة عربية تجمع جميع أدوات الذكاء الاصطناعي في  مختلف المجالات، وهندسة التلقين، ومقالات مختلفة.
                     </p>
-                    <p class="footer-text mt-5 " dir="rtl">
+                    <p class="footer-text mt-5" dir="rtl">
                         جميع الحقوق محفوظة | HONA AI &copy; 2024
                     </p>
                 </div>
                 <div class="col-lg-2 col-sm-12 mb-3 pb-4" dir="rtl">
-                    <p class="">الروابط السريعة</p>
+                    <p>الروابط السريعة</p>
                     <ul class="list-unstyled">
-                        <li><a href="#" class="footer-text text-dark ">الصفحة الرئيسية</a></li>
-                        <li><a href="#" class="footer-text text-dark ">التصنيفات</a></li>
-                        <li><a href="#" class="footer-text text-dark ">الأسعار</a></li>
-                        <li><a href="#" class="footer-text text-dark ">تواصل معنا</a></li>
-                        <li><a href="#" class="footer-text text-dark ">من نحن</a></li>
+                        <li><a href="#" class="footer-text text-light">الصفحة الرئيسية</a></li>
+                        <li><a href="#" class="footer-text text-light">التصنيفات</a></li>
+                        <li><a href="#" class="footer-text text-light">الأسعار</a></li>
+                        <li><a href="#" class="footer-text text-light">تواصل معنا</a></li>
+                        <li><a href="#" class="footer-text text-light">من نحن</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-2 col-sm-12 pb-5"  dir="rtl">
-                    <p class="fs-6">الايميل</p>
-                    <a href="info@honaai.com" class="footer-text text-dark  ">info@honaai.com</a>
+
+                <div class="col-lg-3 col-sm-12 form-div"  dir="rtl">
+                    <div class="">
+                        <input type="text" class="form-control border-1 mb-2" id="exampleFormControlInput1" dir="rtl" placeholder="الاسم">
+                    </div>
+                    <div class="mb-3">
+                        <input type="email" class="form-control border-1" id="exampleFormControlInput1" dir="rtl" placeholder="البريد الالكتروني">
+                    </div>
+                    <div class="mb-3">
+                        <textarea class="form-control border-1" id="exampleFormControlTextarea1" rows="8" dir="rtl"
+                            placeholder="كيف نساعدك؟"></textarea>
+                    </div>
+                    <div class="d-flex justify-content-center mt-2">
+                        <button type="button" class="btn btn-send rounded-4 px-4 fw-bold">إرسال</button>
+                    </div>
                 </div>
+
                 <div class="col-lg-2 col-sm-12 mb-3 social-icons" dir="rtl">
                     <p class="fs-6 p-font-footer">وسائل التواصل</p>
                     <div class="icon-container">
-                        <a href=""><i class="fa-brands fa-facebook-f fs-4 footer-text text-dark"></i></a>
-                        <a href=""><i class="bi bi-instagram fs-4 footer-text text-dark"></i></a>
-                        <a href=""><i class="bi bi-twitter-x fs-4 footer-text text-dark"></i></a>
-                        <a href=""><i class="bi bi-whatsapp fs-4 footer-text text-dark"></i></a>
+           
+                        <a href="">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="20" viewBox="0 0 22 17" fill="none" class="footer-text">
+                                <path
+                                    d="M1 3.16608V14.6168C1 15.3631 1.605 15.9681 2.35135 15.9681H5.59459V8.27298L11 12.3646L16.4054 8.27298V15.9681H19.6486C20.395 15.9681 21 15.3631 21 14.6168V3.16608C21 1.37784 18.9527 0.36257 17.5292 1.445L11 6.40933L4.47081 1.44514C3.0473 0.36257 1 1.37784 1 3.16608Z"
+                                    stroke="#FAFAFA" stroke-width="2" stroke-linejoin="round" />
+                            </svg>
+                        </a>
+                        <a href=""><i class="fa-brands fa-facebook-f fs-4 footer-text text-light mt-2"></i></a>
+                        <a href=""><i class="bi bi-instagram fs-4 footer-text text-light"></i></a>
+                        <a href=""><i class="bi bi-twitter-x fs-4 footer-text text-light"></i></a>
+                        <a href=""><i class="bi bi-whatsapp fs-4 footer-text text-light"></i></a>
                     </div>
                 </div>
 
