--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <section class="nav-bar ">
         <nav class="navbar navbar-expand-lg w-90 mx-auto ">
-            <button class="btn btn-bg">تسجيل الدخول</button>
-            <button _ngcontent-ng-c4172985499="" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" (click)="toggleNavbar()" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler d-lg-none collapsed"><span _ngcontent-ng-c4172985499="" class="navbar-toggler-icon"></span></button>
+          <button class="Btn text-dark text-bold">
+            تسجيل الدخول
+          </button>
+          <button _ngcontent-ng-c4172985499="" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" (click)="toggleNavbar()" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler d-lg-none collapsed"><span _ngcontent-ng-c4172985499="" class="navbar-toggler-icon"></span></button>
           
             <div class="collapse navbar-collapse " id="navbarSupportedContent"  [style.display]="navbarOpen ? 'flex' : 'none'">
               <ul class="navbar-nav mx-auto">
@@ -10,7 +12,7 @@
                   <a class="nav-link" href="#about-us">من نحن ؟</a>
                 </li>
                 <li class="nav-item mx-1">
-                    <a class="nav-link" href="">تواصل معنا</a>
+                    <a class="nav-link" href="#contact-us">تواصل معنا</a>
                   </li>
                   <li class="nav-item mx-1">
                     <a class="nav-link" href="#">الأسعار</a>
