--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,3 +5,43 @@ a {
 .card {
   cursor: pointer;
 }
+.text-h2{
+  font-weight: 400;
+  font-size: 40px;
+}
+
+.btn-second {
+  --bs-btn-color: #000;
+  --bs-btn-bg: var(--white, #FAFAFA);
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+  --bs-btn-border-color: none;
+  --bs-btn-hover-color:none;
+  --bs-btn-hover-bg: var(--white, #FAFAFA);
+
+  --bs-btn-hover-border-color: none;
+  font-size: 24px;
+  font-weight: 500;
+  border-radius: 8px;
+  margin: 10px 11px;
+  padding: 5px 5px;
+  width: 100%;
+    }
+    .form-cn {
+      box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);
+      padding: 14px 17px;
+      display: block;
+      width: 100%;
+      padding: 0.375rem 0.75rem;
+      font-size: 1rem;
+      font-weight: 400;
+      line-height: 1.5;
+      color: #212529;
+      background-color: #fff;
+      background-clip: padding-box;
+      border: 1px solid #ced4da;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
+      border-radius: 0.375rem;
+      transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    }
