--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,12 +1,44 @@
+<section>
+  <app-navbar></app-navbar>
+</section>
 <section class="container py-4 home">
-  <div class="row justify-content-center">
-    <div class="col-md-10">
-      <input
-        type="search"
-        class="form-control form-control-lg mb-4"
-        placeholder="Search here"
-      />
+  <div class="text d-flex align-items-center flex-column my-5 " dir="rtl">
+    <div class="text-h2 d-flex justify-content-center ">
+      <img src="assets/card1.svg" alt="" class="ms-2 " style="width: 56px;height:56px ;">
+      <h2>أدوات الذكاء الاصطناعي</h2>
+    </div>
 
+    <h4 class="mt-3 text-muted" >وفرنا لك أكثر من أداة في المجالات المختلفة</h4>
+  </div>
+  
+  <div class="row justify-content-center align-items-center">
+    <div class="col-md-3 mt-0 mb-4">
+      <div class="filter-section text-end" >
+        <select #filterSelect class="btn btn-second" dir="rtl">
+          <option value="" disabled selected>تصنيف حسب</option>
+          <option value="By Order">By Order</option>
+          <option value="Made in Saudi">Made in Saudi</option>
+        </select>
+      </div>
+     </div>
+    <div class="col-md-9 mt-0">
+      <!-- <input
+        type="search"
+        class="form-cn mb-4 "
+        placeholder="ابحث عن أداة .."
+        dir="rtl"
+      /> -->
+
+      <div class="input-group mb-3">
+        <span class="input-group-text">@</span>
+        <div class="form-floating">
+          <input type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+          <label for="floatingInputGroup1">Username</label>
+        </div>
+      </div>
+    </div>
+
+   </div>
       <div class="row gy-4">
         <div *ngFor="let item of toolList" class="col-md-6">
           <div
@@ -29,6 +61,8 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
+
+</section>
+<section>
+  <app-footer></app-footer>
 </section>
