--- a/src/app/components/prompts/prompts.component.css
+++ b/src/app/components/prompts/prompts.component.css
@@ -37,13 +37,19 @@
 
   .btn-border {
     --bs-btn-color: #000;
-    --bs-btn-bg: #fff;
-    --bs-btn-border-color: #000;
+    font-weight: bold;
+    /* --bs-btn-bg: #fff; */
+    background: var(--Primary, #F3DAA2);
+    --bs-btn-border-color:none;
+   box-shadow: 0px 2px 5px 1.5px rgba(0, 0, 0, 0.25);;
     width: fit-content;
     margin-bottom: 1rem;
-    --bs-btn-hover-color: #000;
+    --bs-btn-hover-color: var(--black, #0A0A0A);
+    
     --bs-btn-hover-bg: #fff;
     --bs-btn-hover-border-color: #000;
+    border-radius: 15px;
+    padding: 15px;
     /* --bs-btn-focus-shadow-rgb: 225, 83, 97;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #b02a37;
@@ -53,3 +59,5 @@
     --bs-btn-disabled-bg: #dc3545;
     --bs-btn-disabled-border-color: #dc3545; */
 }
+.btn-border:hover{
+scale: 1.1;}
