--- a/src/app/components/prompts/prompts.component.html
+++ b/src/app/components/prompts/prompts.component.html
@@ -14,11 +14,11 @@
   <div class="row row-cols-1 row-cols-md-3 g-4 mt-5">
     <!-- Use *ngFor to loop through categories if they are dynamic -->
     <div class="col" *ngFor="let category of CatList">
-      <div class="card h-100 text-end">
+      <div class="card h-100 text-center">
         <div class="card-body">
           <h5 class="card-title text-dark pb-4">{{ category }}</h5>
         </div>
-        <div class="d-flex justify-content-end me-3">
+        <div class="d-flex justify-content-center me-3 ">
         <button class="btn btn-border " dir="rtl" (click)="selectCategory(category)" routerLink="/currentPrompts" > استكشف التلقينات
              
         </button>
