--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -3,12 +3,10 @@
         <h1 class="text-center py-4 fw-bold fs-2" dir="rtl">عن هنا Ai</h1>
         <div class="row justify-content-center">
             <div class="col-lg-6 col-sm-12 close-spacing">
-                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">وجود تلقينات جاهزة في مجالات متنوعة لتسهيل إستخدام
-                    الذكاء</p>
+                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl"> مكتبة واسعة لأدوات الذكاء المختلفة في مكان واحد لتسريع الوصول للأداة المناسبة</p>
             </div>
             <div class="col-lg-6 col-sm-12 close-spacing">
-                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">مكتبة واسعة لأدوات الذكاء المختلفة في مكان واحد
-                    لتسريع الوصول للأداة المناسبة</p>
+                <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">نتميز بوجود كلمات دلالية للتعامل مع الذكاء الاصطناعي (التلقينات الجاهزة)</p>
             </div>
             <div class="col-lg-6 col-sm-12 close-spacing">
                 <p class="text-color text-light px-4 py-4 rounded-4 " dir="rtl">إثراء المحتوى العربي بمقالات تعليمية عن استخدام
