--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -3,7 +3,7 @@
   </section>
   <section class="details py-5">
     <div class="container mt-5" >
-      <div class="toolsLink d-flex" dir="rtl" >
+      <div class="toolsLink d-flex" dir="rtl" routerLink="/home">
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
           <path d="M1 17L9 9L1 1" stroke="#557481" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
