--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -4,9 +4,9 @@
 
     كيفية استخدامه، أدواته <br >المختلفة، والتلقينات الجاهزة </p>
 
-  <h2 class="">تبحث عن أدوات للذكاء الاصطناعي تعزز من مشاريعك وأعمالك اليومية؟</h2>
+  <h2 class="">مساعدك في التعامل مع الذكاء الاصطناعي من المبتدىء للخبير</h2>
   <div class="button-container d-flex justify-content-center">
-    <button class="btn btn-border me-2">ابدأ أول خطواتك معنا</button>
+    <button class="btn btn-border me-2">تصفح كضيف</button>
     <button class="btn btn-bg ms-2">سجل الآن</button>
 
   </div>
