--- a/src/app/components/show-case/show-case.component.html
+++ b/src/app/components/show-case/show-case.component.html
@@ -7,7 +7,40 @@
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
-    <div class="carousel-inner">
+
+
+    <div class="">
+      <img src="assets/bannerGIF.gif" class="d-block w-100" alt="...">
+    </div>
+</div>
+</section>
+
+<section >
+    <app-hero></app-hero>
+</section>
+<section>
+    <app-features></app-features>
+</section>
+<section id="about-us">
+    <app-about-us></app-about-us>
+</section>
+
+<section id="footer">
+    <app-footer></app-footer>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="assets/bannerGIF.gif" class="d-block w-100" alt="...">
       </div>
@@ -26,20 +59,4 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
-
-</section>
-<section >
-    <app-hero></app-hero>
-
-</section>
-<section>
-    <app-features></app-features>
-</section>
-<section id="about-us">
-    <app-about-us></app-about-us>
-</section>
-
-<section id="footer">
-    <app-footer></app-footer>
-</section>
+  </div> -->
