--- a/src/app/components/show-case/show-case.component.html
+++ b/src/app/components/show-case/show-case.component.html
@@ -9,8 +9,8 @@
     </div>
 
 
-    <div class="">
-      <img src="assets/bannerGIF.gif" class="d-block w-100" alt="...">
+    <div class="banner">
+      <img src="assets/bannerGIF.gif" class="d-block w-100" alt="..." >
     </div>
 </div>
 </section>
