--- a/src/app/components/show-case/show-case.component.css
+++ b/src/app/components/show-case/show-case.component.css
@@ -28,10 +28,13 @@
 
 } 
 
+
+
+
 @media (max-width:992px) {
     .show-case {
-    
-        background-image: url('/assets/Banner 991.webp');
+       
+        /* background-image: url('/assets/Banner 991.webp'); */
         background-size: 100% 100%; 
         background-position: center; 
         background-repeat: no-repeat; 
@@ -43,12 +46,15 @@
        
        position: relative;
 }
+.banner img{
+    height: 642px;
+}
 }
 
 @media (max-width:575px) {
     .show-case {
     
-        background-image: url(/assets/Banner478.webp);
+        /* background-image: url(/assets/Banner478.webp); */
         background-size: 100% 100%;
         background-position: center;
         background-repeat: no-repeat;
@@ -63,7 +69,7 @@
 @media (max-width:573px) {
     .show-case {
     
-        background-image: url(/assets/huna-ai-logo.png);
+        /* background-image: url(/assets/huna-ai-logo.png); */
         background-size: 100% 100%;
         background-position: center;
         background-repeat: no-repeat;
@@ -77,7 +83,7 @@
 @media (max-width:1200px) {
     .show-case {
     
-        background-image: url(/assets/huna-ai-logo.png);
+        /* background-image: url(/assets/huna-ai-logo.png); */
         background-size: 100% 100%;
         background-position: center;
         background-repeat: no-repeat;
