--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -10,17 +10,17 @@
         <p class="me-2 text-muted">الرجوع لصفحة الأدوات</p>
       </div>
     <div class="row mt-5 ">
-      <div class="col-md-6">
-        <iframe
-        [src]="toolInfo[0]?.InstructionalVideoURL | safeURL"
-        width="560"
-        height="315"
-        frameborder="0"
-        allowfullscreen
-        class="bg-danger"
-      ></iframe>
+      <div class="col-md-6 " >
+        <a [href]="toolInfo[0]?.InstructionalVideoURL" target="_blank">
+        <div class="icon bg-main  d-flex justify-content-center align-items-center" style="width:560px; height: 315px;" >
+          <i class="fa-brands fa-youtube fs-1 color-red"></i>
 
-      <p class="text-muted text-center">أضغط على الفيديو اعلاه لمعرفه كيفية استخدام الأداه</p>
+        </div>
+      </a>
+        
+
+
+      <p class="text-muted text-center  mt-2">أضغط على الفيديو اعلاه لمعرفه كيفية استخدام الأداه</p>
 
         <!-- <div class="w-100 h-50">{{ toolInfo[0]?.Name }}</div>
         <div class="w-100 h-50">{{ toolInfo[0]?.Category }}</div>
@@ -44,6 +44,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
             <path d="M23.9518 21.9059L19.7905 10.271C19.4982 9.50556 18.8441 9.03237 18.0926 9.03237C17.341 9.03237 16.7008 9.50556 16.3807 10.2989L12.2334 21.9059C12.0385 22.4487 12.3169 23.0472 12.8596 23.242C13.4024 23.4368 14.0009 23.1585 14.1957 22.6157L15.0586 20.208H21.1126L21.9755 22.6157C22.1286 23.0472 22.5322 23.3116 22.9637 23.3116C23.075 23.3116 23.2002 23.2977 23.3116 23.2559C23.8544 23.0611 24.1327 22.4626 23.9379 21.9199L23.9518 21.9059ZM15.824 18.1065L18.1065 11.7184L20.3889 18.1065H15.824ZM12.2751 5.87313C9.12978 10.8416 6.29065 13.8478 2.83914 15.8519C2.67213 15.9493 2.49121 15.9911 2.3242 15.9911C1.96235 15.9911 1.61441 15.8101 1.41957 15.4761C1.12731 14.9751 1.29431 14.3349 1.79534 14.0565C4.71797 12.3586 7.11177 9.92308 9.79783 5.88705H1.0438C0.47319 5.88705 0 5.41386 0 4.84324C0 4.27263 0.47319 3.79944 1.0438 3.79944H6.26281V1.0438C6.26281 0.47319 6.73601 0 7.30662 0C7.87722 0 8.35042 0.47319 8.35042 1.0438V3.79944H13.5694C14.14 3.79944 14.6132 4.27263 14.6132 4.84324C14.6132 5.41386 14.14 5.88705 13.5694 5.88705H12.2612L12.2751 5.87313ZM12.3308 15.9911C12.1499 15.9911 11.9689 15.9493 11.8019 15.8519C10.8973 15.323 10.0205 14.7385 9.19937 14.1261C8.74009 13.7782 8.64268 13.1241 8.99062 12.6648C9.33855 12.2055 9.99267 12.1081 10.4519 12.456C11.2035 13.0267 12.0246 13.5555 12.8596 14.0426C13.3607 14.3349 13.5277 14.9751 13.2354 15.4761C13.0406 15.8101 12.6926 15.9911 12.3308 15.9911Z" fill="#557481"/>
           </svg>
+
           <p class="me-3">{{toolInfo[0]?.SupportedLanguages}}</p>
         </div>
         <div class="Pricing d-flex flex-row-reverse">
