--- a/src/app/components/current-prompt/current-prompt.component.html
+++ b/src/app/components/current-prompt/current-prompt.component.html
@@ -2,12 +2,18 @@
     <app-navbar></app-navbar>
 </section>
 
-<section class="my-5 container">
-
-    <div class="d-flex justify-content-end me-5">
-        <h2> {{ selectedCategory  }}:تلقينات مجال </h2>
+<section class="my-3 ">
+  <div class="bg-main">
+    <div class="toolsLink d-flex pt-5 pe-5" dir="rtl" routerLink="/prompts">
+    <svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 10 18" fill="none">
+      <path d="M1 17L9 9L1 1" stroke="#557481" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+    </svg>
+    <p class="me-2 text-muted fs-6 ">الرجوع لصفحة التلفينات</p>
+  </div>
+    <div class="d-flex justify-content-end me-5 " >
+        <h2 class="fs-2 mt-5 pt-5" > تلقينات {{ selectedCategory  }} </h2>
     </div>
-
+  </div>
 
 
 <div class="row g-4 mt-5">
