--- a/src/app/components/prompts/prompts.component.css
+++ b/src/app/components/prompts/prompts.component.css
@@ -41,15 +41,15 @@
     /* --bs-btn-bg: #fff; */
     background: var(--Primary, #F3DAA2);
     --bs-btn-border-color:none;
-   box-shadow: 0px 2px 5px 1.5px rgba(0, 0, 0, 0.25);;
+   /* box-shadow: 0px 2px 5px 1.5px rgba(0, 0, 0, 0.25);; */
     width: fit-content;
-    margin-bottom: 1rem;
+    margin-block: 1.2rem;
     --bs-btn-hover-color: var(--black, #0A0A0A);
     
-    --bs-btn-hover-bg: #fff;
+    --bs-btn-hover-bg: #f1cc7b;
     --bs-btn-hover-border-color: #000;
     border-radius: 15px;
-    padding: 15px;
+    padding: 10px;
     /* --bs-btn-focus-shadow-rgb: 225, 83, 97;
     --bs-btn-active-color: #fff;
     --bs-btn-active-bg: #b02a37;
@@ -60,4 +60,8 @@
     --bs-btn-disabled-border-color: #dc3545; */
 }
 .btn-border:hover{
-scale: 1.1;}
+  background-color: #f1cc7b;
+}
+.bg-img{
+  background-image: url();
+}
